--- a/ui/src/assets/styles/index.scss
+++ b/ui/src/assets/styles/index.scss
@@ -3,6 +3,7 @@
 @import "button";
 @import "input";
 @import "link";
+@import "node_modules/vue-select/src/scss/vue-select.scss";
 
 .container {
   width: 1140px;
